# pyocto

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml  publish.yml
benchmark/: requirements.txt
benchmark/benchmark/: collect_results.py  eval.py  generate.py  synthetics.py
benchmark/benchmark/wrappers/: __init__.py  base.py  gamma.py  pyocto.py  real.py  util.py
benchmark/configs/: eval.yaml
benchmark/configs/associator/: gamma.yaml  gamma_1d_chile.yaml  gamma_1d_shallow.yaml  gamma_chile.yaml  gamma_shallow.yaml  pyocto.yaml  pyocto_1d_chile.yaml  pyocto_1d_shallow.yaml  pyocto_chile.yaml  pyocto_shallow.yaml  real.yaml  real_1d_chile.yaml  real_1d_shallow.yaml  real_chile.yaml  real_shallow.yaml
benchmark/configs/data/: chile.yaml
benchmark/synth_configs/: synthetics.yaml
benchmark/synth_configs/data/: chile.yaml  shallow.yaml
docs/: conf.py  index.rst  requirements.txt
docs/pages/: associator.rst  data_formats.rst  parameters.rst  velocity_models.rst
examples/: 01_basics.ipynb  02_velocity_models.ipynb  02_velocity_models2.ipynb  03_interfaces.ipynb
src/: OctoAssociator.cpp  OctoAssociator.h  VelocityModel.cpp  VelocityModel.h  python_bindings.cpp  types.cpp  types.h
src/pyocto/: __init__.py  associator.py
tests/: test_interface.py
tests/data/: graeber.csv  picks  stations
