[build-system]
requires = ["scikit-build-core>=0.5.1", "pybind11", "wheel", "setuptools>=61.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyocto"
version = "0.1.6"
description="A high-throughput seismic phase associator"
readme = "README.md"
authors = [
    { name = "My Name", email = "me@email.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.1",
    "numpy<2",  # Pinned for now because there seems to be a Pyrocko incompatibility
    "pyproj",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "pyrocko>=2023.06.29",
    "pyarrow>=12.0.1",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
